--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - UpConstruction Bootstrap Template</title>
+  <title>Grupo N2</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -43,9 +43,9 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="#services">Servicios</a></li>
+          <li><a href="projects.html">Proyectos</a></li>
+          <li><a href="contact.html">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -63,7 +63,9 @@
           <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-6 text-center">
               <h2>Bienvenido a N2</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p>¡Bienvenidos a N2! Somos su aliado de confianza en remodelaciones y construcción. Con pasión por el detalle y compromiso con la calidad, 
+                transformamos sus ideas en espacios únicos que superan sus expectativas. 
+                Desde pequeñas renovaciones hasta grandes proyectos, en N2 estamos aquí para hacer realidad sus sueños. ¡Construyamos juntos!</p>
               <a href="#get-started" class="btn-get-started">Saber más</a>
             </div>
           </div>
@@ -113,21 +115,21 @@
 
           <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
             <div class="content">
-              <h3>Minus hic non reiciendis ea possimus at quia.</h3>
-              <p>Rem id rerum. Debitis deserunt quidem delectus expedita ducimus dolor. Aut iusto ipsa. Eos ipsum nobis ipsa soluta itaque perspiciatis fuga ipsum perspiciatis. Eum amet fugiat totam nisi possimus ut delectus dicta.
+              <h3>Obtén tu cotización personalizada</h3>
+              <p>En N2, entendemos que cada proyecto es único. Comparte con nosotros tu visión y necesidades, y te proporcionaremos una cotización detallada y ajustada a tus requerimientos.
               </p>
-              <p>Aliquam velit deserunt autem. Inventore et saepe. Tenetur suscipit eligendi labore culpa eos. Deserunt porro magni qui necessitatibus dolorem at animi cupiditate.</p>
+              <p>¡Estamos listos para convertir tus ideas en realidad, con transparencia y sin sorpresas!
+              </p>
             </div>
           </div>
 
           <div class="col-lg-5" data-aos="zoom-out" data-aos-delay="200">
             <form action="forms/quote.php" method="post" class="php-email-form">
-              <h3>Get a quote</h3>
-              <p>Vel nobis odio laboriosam et hic voluptatem. Inventore vitae totam. Rerum repellendus enim linead sero park flows.</p>
+              <h3>Contactanos</h3>
               <div class="row gy-3">
 
                 <div class="col-12">
-                  <input type="text" name="name" class="form-control" placeholder="Name" required="">
+                  <input type="text" name="name" class="form-control" placeholder="Nombre" required="">
                 </div>
 
                 <div class="col-12 ">
@@ -135,11 +137,11 @@
                 </div>
 
                 <div class="col-12">
-                  <input type="text" class="form-control" name="phone" placeholder="Phone" required="">
+                  <input type="text" class="form-control" name="phone" placeholder="Telefono" required="">
                 </div>
 
                 <div class="col-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
+                  <textarea class="form-control" name="message" rows="6" placeholder="Mensaje" required=""></textarea>
                 </div>
 
                 <div class="col-12 text-center">
@@ -187,7 +189,8 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Card Item -->
+          </div>
+          <!-- End Card Item -->
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="card-item">
@@ -241,7 +244,8 @@
 
       </div>
 
-    </section><!-- /Constructions Section -->
+    </section>
+    <!-- /Constructions Section -->
 
     <!-- Services Section -->
     <section id="services" class="services section light-background">
