--- a/index.html
+++ b/index.html
@@ -130,25 +130,24 @@
               <div class="row gy-3">
 
                 <div class="col-12">
-                  <input type="text" class="form-control" name="name" placeholder="Nombre" required="">
+                  <input type="text" class="form-control" name="name-index" placeholder="Nombre" required="">
                 </div>
 
                 <div class="col-12 ">
-                  <input type="email" class="form-control" name="email" placeholder="Email" required="">
+                  <input type="email" class="form-control" name="email-index" placeholder="Email" required="">
                 </div>
 
                 <div class="col-12">
-                  <input type="text" class="form-control" name="phone" placeholder="Telefono" required="">
+                  <input type="text" class="form-control" name="phone-index" placeholder="Telefono" required="">
                 </div>
 
                 <div class="col-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Mensaje" required=""></textarea>
+                  <textarea class="form-control" name="message-index" rows="6" placeholder="Mensaje" required=""></textarea>
                 </div>
 
                 <div class="col-12 text-center">
                   <div class="loading">Loading</div>
                   <div class="sent-message">Your quote request has been sent successfully. Thank you!</div>
-
                   <button type="submit">Enviar</button>
                 </div>
 
