--- a/index.html
+++ b/index.html
@@ -125,35 +125,31 @@
           </div>
 
           <div class="col-lg-5">
-            <form name="contact-index" data-netlify="true" method="POST" class="php-email-form">
-              <h3>Contáctanos</h3>
-              <div class="row gy-3">
-
-                <div class="col-12">
-                  <input type="text" class="form-control" name="name-index" placeholder="Nombre" required="">
+            <form method="post" role="form" class="php-email-form" name="contact" netlify data-netlify="true">
+              <div class="row">
+                <div class="col-md-6 form-group">
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" required>
                 </div>
-
-                <div class="col-12 ">
-                  <input type="email" class="form-control" name="email-index" placeholder="Email" required="">
+                <div class="col-md-6 form-group mt-3 mt-md-0">
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Correo" required>
                 </div>
-
-                <div class="col-12">
-                  <input type="text" class="form-control" name="phone-index" placeholder="Telefono" required="">
-                </div>
-
-                <div class="col-12">
-                  <textarea class="form-control" name="message-index" rows="6" placeholder="Mensaje" required=""></textarea>
-                </div>
-
-                <div class="col-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="sent-message">Your quote request has been sent successfully. Thank you!</div>
-                  <button type="submit">Enviar</button>
-                </div>
-
               </div>
+            
+              <div class="form-group mt-3">
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Que servicios te interesan?" required>
+              </div>
+              <div class="form-group mt-3">
+                <textarea class="form-control" name="message" rows="5" placeholder="Cuéntanos más sobre ti!" required></textarea>
+              </div>
+              <div class="my-3">
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">Your message has been sent. Thank you!</div>
+              </div>
+              <div class="text-center"><button type="submit">Enviar</button></div>
             </form>
-          </div><!-- End Quote Form https://www.youtube.com/watch?v=WceGUOTMDoM-->
+          </div>
+          <!-- End Quote Form https://www.youtube.com/watch?v=WceGUOTMDoM-->
 
           <!-- New Form section -->
           <!-- <div class="col-lg-5" data-aos="zoom-out" data-aos-delay="200">
