--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           </div>
 
           <div class="col-lg-5">
-            <form method="post" role="form" class="php-email-form" name="contact" netlify data-netlify="true">
+            <form method="post" role="form" class="php-email-form" name="contact" netlify data-netlify="true" action="/">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" required>
