--- a/index.html
+++ b/index.html
@@ -141,12 +141,15 @@
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Cuéntanos más sobre ti!" required></textarea>
               </div>
-              <!-- <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
+              <div class="my-3">
+                <!-- <div class="loading">Loading</div>
+                <div class="error-message"></div> -->
                 <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div> -->
-              <div class="text-center"><button type="submit">Enviar</button></div>
+              </div>
+              <div class="text-center">
+                <br>
+                <button type="submit">Enviar</button>
+              </div>
             </form>
           </div>
           <!-- End Quote Form https://www.youtube.com/watch?v=WceGUOTMDoM-->
