--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                 <textarea class="form-control" name="message" rows="5" placeholder="Cuéntanos más sobre ti!" required></textarea>
               </div>
               <div class="my-3">
-                <!-- <div class="loading">Loading</div>
-                <div class="error-message"></div> -->
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center">
