--- a/index.html
+++ b/index.html
@@ -125,21 +125,21 @@
           </div>
 
           <div class="col-lg-5">
-            <form method="post" role="form" class="php-email-form" name="contact" netlify data-netlify="true" action="#" onsubmit="location.reload();">
+            <form method="post" role="form" class="php-email-form" name="contact-index" netlify data-netlify="true" action="#" onsubmit="location.reload();">
               <div class="row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" required>
+                  <input type="text" name="name-index" class="form-control" id="name-index" placeholder="Nombre" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Correo" required>
+                  <input type="text" class="form-control" name="phone-index" id="phone-index" placeholder="Teléfono" required="">
                 </div>
               </div>
             
               <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Que servicios te interesan?" required>
+                <input type="email" class="form-control" name="email-index" id="email-index" placeholder="Correo" required>
               </div>
               <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Cuéntanos más sobre ti!" required></textarea>
+                <textarea class="form-control" name="message-index" rows="5" placeholder="Que servicios te interesan?" required></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
