First version -imgs

--- a/index.html
+++ b/index.html
@@ -367,41 +367,42 @@
           <div class="col-lg-5 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <h3>Nuestro Proceso: De la Idea a la Realidad</h3>
             <p>
-              En N2, podemos encargarmos de todo el proceso de principio a fin si así lo deseas. Desde la concepción de la idea hasta la entrega final, 
-              nuestro equipo gestiona cada etapa del proyecto con atención al detalle y compromiso con la excelencia. 
-              Te acompañamos en cada paso, asegurando que el resultado final no solo cumpla, sino que supere tus expectativas. 
-              ¡Confía en nosotros para hacer realidad tu visión, sin complicaciones!
+              En N2, nuestro enfoque va más allá de la ejecución de proyectos; está basado en valores fundamentales que guían cada aspecto de nuestro trabajo. 
+              Desde la concepción de la idea hasta la entrega final, nos comprometemos a gestionar cada etapa con integridad, innovación, y una dedicación inquebrantable a la calidad. 
+              Te acompañamos en cada paso del proceso, asegurando que no solo cumplamos, 
+              sino que superemos tus expectativas. ¡Confía en nosotros para hacer realidad tu visión, respaldados por los valores que nos definen!
             </p>
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-easel flex-shrink-0"></i>
               <div>
-                <h4><a href="" class="stretched-link">Lorem Ipsum</a></h4>
-                <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+                <h4><a href="#features" class="stretched-link">Compromiso con la Calidad</a></h4>
+                <p>Nos dedicamos a la excelencia en cada proyecto, asegurando que cada detalle sea impecable y supere tus expectativas.</p>
               </div>
             </div><!-- End Icon Box -->
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-patch-check flex-shrink-0"></i>
               <div>
-                <h4><a href="" class="stretched-link">Nemo Enim</a></h4>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+                <h4><a href="#features" class="stretched-link">Transparencia y Honestidad</a></h4>
+                <p>Construimos con integridad, manteniendo una comunicación clara y abierta en cada paso del camino.</p>
               </div>
             </div><!-- End Icon Box -->
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="500">
               <i class="bi bi-brightness-high flex-shrink-0"></i>
               <div>
-                <h4><a href="" class="stretched-link">Dine Pad</a></h4>
-                <p>Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt minus aut eligendi omnis</p>
+                <h4><a href="#features" class="stretched-link">Innovación Constante </a></h4>
+                <p>Adoptamos las últimas tendencias y tecnologías para ofrecer soluciones innovadoras que elevan tus espacios.</p>
               </div>
             </div><!-- End Icon Box -->
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="600">
               <i class="bi bi-brightness-high flex-shrink-0"></i>
               <div>
-                <h4><a href="" class="stretched-link">Tride clov</a></h4>
-                <p>Est voluptatem labore deleniti quis a delectus et. Saepe dolorem libero sit non aspernatur odit amet. Et eligendi</p>
+                <h4><a href="#features" class="stretched-link">Enfoque en el Cliente
+                </a></h4>
+                <p>Tu satisfacción es nuestra meta principal. Escuchamos tus necesidades y trabajamos incansablemente para cumplirlas.</p>
               </div>
             </div><!-- End Icon Box -->
 
@@ -421,25 +422,25 @@
 
           <li class="nav-item col-3" role="presentation">
             <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#features-tab-1" aria-selected="true" role="tab">
-              <h4>Modisit</h4>
+              <h4>Consulta</h4>
             </a>
           </li><!-- End tab nav item -->
 
           <li class="nav-item col-3" role="presentation">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-2" aria-selected="false" tabindex="-1" role="tab">
-              <h4>Praesenti</h4>
+              <h4>Planificación</h4>
             </a><!-- End tab nav item -->
 
           </li>
           <li class="nav-item col-3" role="presentation">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-3" aria-selected="false" tabindex="-1" role="tab">
-              <h4>Explica</h4>
+              <h4>Ejecución</h4>
             </a>
           </li><!-- End tab nav item -->
 
           <li class="nav-item col-3" role="presentation">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-4" aria-selected="false" tabindex="-1" role="tab">
-              <h4>Nostrum</h4>
+              <h4>Entrega</h4>
             </a>
           </li><!-- End tab nav item -->
 
@@ -450,15 +451,14 @@
           <div class="tab-pane fade active show" id="features-tab-1" role="tabpanel">
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
-                <h3>Voluptatem dignissimos provident</h3>
+                <h3>Transformamos tu Visión en un Proyecto Real</h3>
                 <p class="fst-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua.
+                  Convertimos tus ideas en un plan concreto, entendiendo tus necesidades y visualizando tu proyecto.
                 </p>
                 <ul>
-                  <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Escuchamos tu Visión: Entendemos tus necesidades, estilo y objetivos.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Propuestas Creativas: Presentamos ideas innovadoras y personalizadas.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Visualización del Proyecto: Bocetos y planos para que imagines el resultado final.</span></li>
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -470,16 +470,14 @@
           <div class="tab-pane fade" id="features-tab-2" role="tabpanel">
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
-                <h3>Neque exercitationem debitis</h3>
+                <h3>Tu Proyecto, Planificado al Detalle y sin Sorpresas</h3>
                 <p class="fst-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua.
+                  Planificamos cada detalle y te ofrecemos una estimación precisa para asegurar un proyecto sin sorpresas.
                 </p>
                 <ul>
-                  <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Plan Detallado: Cronograma claro y preciso para cada fase del proyecto</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Transparencia Financiera: Estimación de costos sin sorpresas.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Selección de Materiales: Te ayudamos a elegir los mejores materiales según tu presupuesto y estilo.</span></li>
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -491,16 +489,16 @@
           <div class="tab-pane fade" id="features-tab-3" role="tabpanel">
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
-                <h3>Voluptatibus commodi accusamu</h3>
-                <ul>
-                  <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</span></li>
-                </ul>
+                <h3>Construcción con Precisión y Calidad Inigualables</h3>
                 <p class="fst-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua.
+                  Damos vida a tu proyecto con mano de obra experta y supervisión constante para garantizar calidad.
                 </p>
+                <ul>
+                  <li><i class="bi bi-check2-all"></i> <span>Mano de Obra Experta: Contratamos profesionales cualificados para cada tarea.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Supervisión Continua: Monitoreo diario para asegurar calidad y cumplimiento de plazos.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Flexibilidad en el Proceso: Ajustes sobre la marcha para mantenernos alineados con tus expectativas.</span></li>
+                </ul>
+                
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
                 <img src="assets/img/features-3.jpg" alt="" class="img-fluid">
@@ -511,15 +509,14 @@
           <div class="tab-pane fade" id="features-tab-4" role="tabpanel">
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
-                <h3>Omnis fugiat ea explicabo sunt</h3>
+                <h3>Recibe tu Espacio Perfecto, Listo para Disfrutar</h3>
                 <p class="fst-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua.
+                  Te entregamos un espacio perfecto y estamos disponibles para cualquier necesidad post-entrega.
                 </p>
                 <ul>
-                  <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Revisión Final: Inspección detallada para asegurar que todo esté perfecto.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Entrega Llave en Mano: Te entregamos un espacio listo para disfrutar.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Atención Post-Entrega: Seguimiento continuo para resolver cualquier detalle adicional.</span></li>
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
