turn off prjct page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="#services">Servicios</a></li>
           <li><a href="#alt-services">Nuestro Proceso</a></li>
-          <li><a href="projects.html">Proyectos</a></li>
+          <!-- <li><a href="projects.html">Proyectos</a></li> -->
           <li><a href="contact.html">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -341,7 +341,7 @@
               <div class="icon">
                 <i class="fa-solid fa-arrow-up-from-ground-water"></i>
               </div>
-              <h3>Estimación de Costos y Planificación</h3>
+              <h3>Estimación y Planificación</h3>
               <p>Te proporcionamos una estimación detallada y precisa de los costos de tu proyecto desde el inicio. Analizamos cada aspecto de la obra, 
                 desde materiales hasta mano de obra, para ofrecerte un plan financiero claro y sin sorpresas. Además, este servicio es ideal para personas aventureras que desean 
                 realizar sus propias remodelaciones, 
