final first draft landing

--- a/index.html
+++ b/index.html
@@ -152,18 +152,8 @@
               </div>
             </form>
           </div>
-          <!-- End Quote Form https://www.youtube.com/watch?v=WceGUOTMDoM-->
+          <!-- End Quote Form-->
         </div>
-
-        <!-- <script>
-          function refreshPage(event) {
-              event.preventDefault(); // Evita que el formulario se envíe automáticamente
-              setTimeout(function() {
-                  location.reload(); // Recarga la página después de 2 segundos
-              }, 2000);
-              document.forms["contact"].submit(); // Enviar el formulario después de detener el evento por defecto
-          }
-      </script> -->
       </div>
 
     </section><!-- /Get Started Section -->
@@ -271,7 +261,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item  position-relative">
               <div class="icon">
-                <i class="fa-solid fa-mountain-city"></i>
+                <i class="fa-solid fa-paint-roller"></i>
               </div>
               <h3>Obra Blanca</h3>
               <p>Nos especializamos en la finalización de obra blanca, dejando tus espacios listos para vivir. 
@@ -339,7 +329,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="fa-solid fa-arrow-up-from-ground-water"></i>
+                <i class="fa-solid fa-coins"></i>
               </div>
               <h3>Estimación y Planificación</h3>
               <p>Te proporcionamos una estimación detallada y precisa de los costos de tu proyecto desde el inicio. Analizamos cada aspecto de la obra, 
@@ -374,7 +364,7 @@
             </p>
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
-              <i class="bi bi-easel flex-shrink-0"></i>
+              <i class="bi bi-star flex-shrink-0"></i>
               <div>
                 <h4><a href="#features" class="stretched-link">Compromiso con la Calidad</a></h4>
                 <p>Nos dedicamos a la excelencia en cada proyecto, asegurando que cada detalle sea impecable y supere tus expectativas.</p>
@@ -382,7 +372,7 @@
             </div><!-- End Icon Box -->
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="400">
-              <i class="bi bi-patch-check flex-shrink-0"></i>
+              <i class="bi bi-search flex-shrink-0"></i>
               <div>
                 <h4><a href="#features" class="stretched-link">Transparencia y Honestidad</a></h4>
                 <p>Construimos con integridad, manteniendo una comunicación clara y abierta en cada paso del camino.</p>
@@ -390,7 +380,7 @@
             </div><!-- End Icon Box -->
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="500">
-              <i class="bi bi-brightness-high flex-shrink-0"></i>
+              <i class="bi bi-lightbulb flex-shrink-0"></i>
               <div>
                 <h4><a href="#features" class="stretched-link">Innovación Constante </a></h4>
                 <p>Adoptamos las últimas tendencias y tecnologías para ofrecer soluciones innovadoras que elevan tus espacios.</p>
@@ -398,7 +388,7 @@
             </div><!-- End Icon Box -->
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="600">
-              <i class="bi bi-brightness-high flex-shrink-0"></i>
+              <i class="bi bi-people flex-shrink-0"></i>
               <div>
                 <h4><a href="#features" class="stretched-link">Enfoque en el Cliente
                 </a></h4>
