--- a/contact.html
+++ b/contact.html
@@ -50,11 +50,11 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#services">Servicios</a></li>
           <li><a href="#alt-services">Nuestro Proceso</a></li>
           <!-- <li><a href="projects.html">Proyectos</a></li> -->
-          <li><a href="contact.html">Contacto</a></li>
+          <li><a href="contact.html" class="active">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
